--- a/FIAP/aula004-DOM/style.css
+++ b/FIAP/aula004-DOM/style.css
@@ -20,6 +20,10 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+textarea {
+    height: 70px;
+}
+
 form {
     background: #ffffff;
     padding: 20px;
